default/objects/Incentive_Structure__c/Incentive_Structure__c.object-meta.xml
<CustomObject>
    <label>Incentive Structure</label>
    <nameField>
        <displayFormat>IS-{000000000}</displayFormat>
        <label>Incentive Structure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>