default/objects/Incentive_Structure__c/fields/Employee_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Employee_Incentive__c</fullName>
    <label>Employee Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>