default/objects/Incentive_Structure__c/fields/New_Member_Incentive__c.field-meta.xml
<CustomField>
    <fullName>New_Member_Incentive__c</fullName>
    <label>New Member Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>