default/objects/Incentive_Structure__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <externalId>true</externalId>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>