default/objects/Incentive_Structure__c/fields/Referring_Member_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Referring_Member_Incentive__c</fullName>
    <label>Referring Member Incentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>