default/objects/Incentive_Structure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Employee_Incentive__c</columns>
    <columns>New_Member_Incentive__c</columns>
    <columns>Referring_Member_Incentive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>