default/objects/Incentive_Structure__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Employee_Incentive__c</columns>
    <columns>New_Member_Incentive__c</columns>
    <columns>Referring_Member_Incentive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active</label>
</ListView>